clean testing version

--- a/genomes/PLAZA_get_galaxy_information.ipynb
+++ b/genomes/PLAZA_get_galaxy_information.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -4201,7 +4201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4265,8 +4265,6 @@
       "\tSkipping in testing mode\n",
       "Zoysia japonica ssp. nagirizaki\n",
       "\tSkipping in testing mode\n",
-      "\n",
-      "Genomes found on PLAZA FTP: 1\n",
       "Actinidia chinensis\n",
       "\tSkipping in testing mode\n",
       "Amaranthus hypochondriacus\n",
@@ -4376,9 +4374,7 @@
       "Zea mays\n",
       "\tSkipping in testing mode\n",
       "Ziziphus jujuba\n",
-      "\tSkipping in testing mode\n",
-      "\n",
-      "Genomes found on PLAZA FTP: 1\n"
+      "\tSkipping in testing mode\n"
      ]
     }
    ],
@@ -4421,7 +4417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -4446,7 +4442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4467,7 +4463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
